--- a/src/assets/css/Admin/Register/Register.css
+++ b/src/assets/css/Admin/Register/Register.css
@@ -1,53 +1,53 @@
-.main-form {
-    height:140vh;
-    width:100x;
+.mainform {
+    height:130vh;
+    width:1580px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: black(56, 178, 219);
-    background-image: url("'../../../assets/css/Admin/Register/child.jpg");  
+    background-color:rgb(170, 163, 235);
+    /* background-image: url("'../../../assets/css/Admin/Register/child.jpg");   */
     background-repeat: no-repeat;
-    background-size: 1349px 480px;
+    background-size: 1449px 880px;
 
-  }
-  .main-form1 {
+  } 
+  .mainform1 {
     height:131vh;
     width:100x;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: rgb(3, 12, 15);
+    background-color: rgb(131, 212, 240);
     /* background-image: url("../resources/images/boys.jpg");  */
     background-repeat: no-repeat;
-    background-size: 1540px 780px;
+    background-size: 1540px 880px;
   }
 
-  .form-wrapper{
-    width: 49px;
+  .formwrapper{
+    width: 649px;
     display: flex;
     flex-direction: column;
     padding: 20px 40px;
     border-radius: 10px;
 /*box-shadow: 0px 10px 50px #555;*/
-background-color: #a5a2a2ad;
+background-color:whitesmoke;
 
   }
 
   
   
-  .primary {
+ .primary {
     color: rgb(12, 12, 12);
     text-align: center;
     font-style: italic;
   }
   
-  .header{
+  /* header{
     background-color: lightblue;
     padding:0px;
     text-align: center;
-  }
+  } */
   .secondary{
        /* text-align: ;*/
         width: 100%;
@@ -74,9 +74,13 @@ background-color: #a5a2a2ad;
   }
   
  
-  .submit{
-    text-align: right;
+  .reset{
+    text-align: left;
     
     
     }
+    .reset1{
+      text-align: right;
+    }
+    
   
